--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "UNIQUE non replicable (unless you have the seed... is a 128-bit value formatted into blocks of hexadecimal digits separated by a hyphen (\"-\", U+002D).) image supported by RFC 4122 cryptography;",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
