--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "unique-nft-creator",
   "version": "1.0.0",
   "description": "UNIQUE non replicable (unless you have the seed... is a 128-bit value formatted into blocks of hexadecimal digits separated by a hyphen (\"-\", U+002D).) image supported by RFC 4122 cryptography;",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --env devServer",
+    "build": "webpack && grunt bump:minor"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,28 @@
   "bugs": {
     "url": "https://github.com/costa320/unique-NFT-creator/issues"
   },
-  "homepage": "https://github.com/costa320/unique-NFT-creator#readme"
+  "homepage": "https://github.com/costa320/unique-NFT-creator#readme",
+  "dependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
+    "dotenv": "^8.2.0",
+    "grunt": "^1.3.0",
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-rename": "^0.2.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-move": "^1.0.3",
+    "html-webpack-plugin": "^5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "two.js": "^0.7.10",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
