--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "unique-nft-creator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "UNIQUE non replicable (unless you have the seed... is a 128-bit value formatted into blocks of hexadecimal digits separated by a hyphen (\"-\", U+002D).) image supported by RFC 4122 cryptography;",
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --env devServer",
+    "start:server": "node server.js",
     "build": "webpack && grunt bump:minor"
   },
   "repository": {
@@ -24,26 +25,35 @@
   },
   "homepage": "https://github.com/costa320/unique-NFT-creator#readme",
   "dependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.2",
-    "dotenv": "^8.2.0",
-    "grunt": "^1.3.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "axios": "^0.24.0",
+    "babel-loader": "^8.2.3",
+    "chance": "^1.1.8",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.1",
+    "file-loader": "^6.2.0",
+    "grunt": "^1.4.1",
     "grunt-bump": "^0.8.0",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^3.0.0",
-    "grunt-contrib-rename": "^0.2.0",
-    "grunt-contrib-uglify": "^5.0.0",
-    "grunt-move": "^1.0.3",
-    "html-webpack-plugin": "^5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "https": "^1.0.0",
+    "jquery": "^3.6.0",
+    "mini-css-extract-plugin": "^2.4.4",
+    "morgan": "^1.10.0",
+    "open": "^8.4.0",
+    "request": "^2.88.2",
+    "run": "^1.4.0",
+    "style-loader": "^3.3.1",
+    "swagger-ui-express": "^4.1.6",
     "two.js": "^0.7.10",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   }
 }
