new webpack configuration + env varibales + new api defined

--- a/prod.env
+++ b/prod.env
@@ -2,3 +2,4 @@ MORGANLEVEL = ':remote-addr - :remote-user [:date[clf]] ":method :url HTTP/:http
 PORT=8000
 ###########
 enviroment= 'PROD'
+API_URL= ''
