--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "UNIQUE non replicable (unless you have the seed... is a 128-bit value formatted into blocks of hexadecimal digits separated by a hyphen (\"-\", U+002D).) image supported by RFC 4122 cryptography;",
   "main": "server.js",
   "scripts": {
-    "start": "webpack serve --env devServer",
+    "start:serve": "webpack serve --open --mode development --progress ",
     "start:server": "node server.js",
-    "build": "webpack && grunt bump:minor"
+    "build:prod": "grunt bump:patch && webpack --config ./webpack.prod.config.js --progress",
+    "build:dev": "grunt bump:patch && webpack --config ./webpack.DevWithProdEnvs.config.js --progress"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "chance": "^1.1.8",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
