--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unique-nft-creator",
-  "version": "1.2.0",
+  "version": "1.2.3",
   "description": "UNIQUE non replicable (unless you have the seed... is a 128-bit value formatted into blocks of hexadecimal digits separated by a hyphen (\"-\", U+002D).) image supported by RFC 4122 cryptography;",
   "main": "server.js",
   "scripts": {
@@ -51,11 +51,14 @@
     "open": "^8.4.0",
     "request": "^2.88.2",
     "run": "^1.4.0",
-    "style-loader": "^3.3.1",
     "swagger-ui-express": "^4.1.6",
     "two.js": "^0.7.10",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "css-loader": "^6.5.1",
+    "style-loader": "^3.3.1"
   }
 }
